@@ -50,17 +50,9 @@
 #include "jslong.h"
 #include "jsutil.h" /* Added by JSIFY */
 
-/*
-** Note: on some platforms va_list is defined as an array,
-** and requires array notation.
-*/
-#ifdef HAVE_VA_COPY
-#define VARARGS_ASSIGN(foo, bar)        VA_COPY(foo,bar)
-#elif defined(HAVE_VA_LIST_AS_ARRAY)
-#define VARARGS_ASSIGN(foo, bar)        foo[0] = bar[0]
-#else
-#define VARARGS_ASSIGN(foo, bar)        (foo) = (bar)
-#endif
+#include <glib.h>
+
+#define VARARGS_ASSIGN(foo, bar) G_VA_COPY(foo, bar)
 
 /*
 ** WARNING: This code may *NOT* call JS_LOG (because JS_LOG calls it)
