@@ -1,5 +1,12 @@
 2005-04-08  Eric Anholt  <anholt@FreeBSD.org>
 
+	* libswfdec/js/INTEGRATION:
+	* libswfdec/js/jsprf.c:
+	Use G_VA_COPY instead of looking for a define from elsewhere, partially
+	fixing 64-bit builds.
+
+2005-04-08  Eric Anholt  <anholt@FreeBSD.org>
+
 	* libswfdec/actions.c: (action_script_call),
 	(swfdec_action_script_execute):
 	* libswfdec/actions_builtin.c: (mc_play), (mc_stop),
